syntax = "proto3";

package proto;

option java_package = "com.hederahashgraph.service.proto.java";

import "TransactionResponse.proto";
import "ContractGetInfo.proto";
import "Query.proto";
import "Response.proto";
import "Transaction.proto";
import "ContractGetBytecode.proto";
import "GetBySolidityID.proto";


service SmartContractService {
    rpc createContract (Transaction) returns (TransactionResponse);

    rpc updateContract (Transaction) returns (TransactionResponse);

    rpc contractCallMethod (Transaction) returns (TransactionResponse);

    rpc getContractInfo (Query) returns (Response);

    rpc contractCallLocalMethod (Query) returns (Response);

    rpc ContractGetBytecode (Query) returns (Response);

    rpc getBySolidityID (Query) returns (Response);

    }